Update Registration API usage